# drainage

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
src/: analysis.rs  clock.rs  collect.rs  data.rs  graphics.rs  levels.rs  main.rs  model.rs  sources.rs  tui.rs
src/sources/: claude.rs  codex.rs  omp.rs
